# fastapi

./: README.md  main.py  pyproject.toml
app/: app.py  models.py  schemas.py
routers/: notes.py
